--- a/styles/position-page.css
+++ b/styles/position-page.css
@@ -1,1 +1,75 @@
 
+.container{
+	padding-left: 60px;
+	padding-right: 60px;
+}
+nav{
+	position: fixed;
+	background-color: grey;
+	width: 100%;
+	height: 60px;
+	vertical-align: center;
+}
+
+.nav-image{
+	height: 50px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	border-radius: 50%;
+	border: 1px solid black;
+	vertical-align: middle;
+}
+
+ul{
+	list-style-type: none;
+	display: inline-block;
+}
+
+li{
+	display: inline-block;
+}
+
+li::after{
+	content: "|";
+	margin-left: 5px;
+}
+
+nav a:hover{
+	color: black;
+}
+
+body {
+  background: url(../images/outerspace_landscape.jpeg) no-repeat;
+  background-size: cover;
+}
+
+main {
+  padding-top: 90px;
+  min-width: 1000px;
+}
+
+.box {
+  margin-top: 150px;
+  width: 600px;
+  height: 300px;
+  position: relative;
+  border: 10px dotted green;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+.spacecat, .spacedog {
+  position: absolute;
+  width: 200px;
+}
+
+.spacecat {
+  top: -90px;
+  left: -90px;
+}
+
+.spacedog {
+  bottom: -120px;
+  right: -60px;
+}
